<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.paidaki.wordsearcher.MainActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDictionary"
        android:hint="@string/lt_select_dictionary_file"
        android:textAlignment="center"
        android:editable="false"
        android:inputType="none"
        android:layout_below="@+id/tvDictionary"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open"
        android:id="@+id/btnOpen"
        android:layout_below="@+id/etDictionary"
        android:layout_centerHorizontal="true"
        android:onClick="openFile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dictionary"
        android:id="@+id/tvDictionary"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:labelFor="@id/etDictionary"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnOpen"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/container">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etWord"
            android:inputType="text"
            android:layout_below="@+id/tvMystery"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mystery_word"
            android:id="@+id/tvMystery"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:labelFor="@id/etWord"
            android:textSize="20sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:id="@+id/btnSearch"
            android:layout_below="@+id/etWord"
            android:layout_centerHorizontal="true"
            android:enabled="true"
            android:onClick="searchMatches"/>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lvMatches"
            android:layout_below="@+id/tvMatches"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/possible_matches"
            android:id="@+id/tvMatches"
            android:layout_below="@+id/btnSearch"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:labelFor="@id/lvMatches"
            android:textSize="20sp"/>
    </RelativeLayout>
</RelativeLayout>
